--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,52 @@
-Django==4.1.1
+asgiref==3.5.2
+astroid==2.12.10
+asttokens==2.0.8
+attrs==22.1.0
+backcall==0.2.0
+colorama==0.4.5
+decorator==5.1.1
+dill==0.3.5.1
 dj-database-url==1.0.0
-gunicorn==20.1.0
-psycopg2-binary==2.9.3
-whitenoise==6.2.0
+Django==4.1.1
+django-ckeditor==6.5.1
 django-environ==0.9.0
-ckeditor==3.5.2
-pillow==9.3.0
+django-js-asset==2.0.0
+executing==1.0.0
+freezegun==1.2.2
+gunicorn==20.1.0
+iniconfig==1.1.1
+ipython==8.5.0
+isort==5.10.1
+jedi==0.18.1
+lazy-object-proxy==1.7.1
+matplotlib-inline==0.1.6
+mccabe==0.7.0
+model-mommy==2.0.0
+packaging==21.3
+parso==0.8.3
+pickleshare==0.7.5
+Pillow==9.3.0
+platformdirs==2.5.2
+pluggy==1.0.0
+prompt-toolkit==3.0.31
+psycopg2-binary==2.9.3
+pure-eval==0.2.2
+py==1.11.0
+Pygments==2.13.0
+pylint==2.15.3
+pylint-django==2.5.3
+pylint-plugin-utils==0.7
+pyparsing==3.0.9
+pytest==7.1.3
+pytest-django==4.5.2
+python-dateutil==2.8.2
+six==1.16.0
+sqlparse==0.4.3
+stack-data==0.5.0
+tomli==2.0.1
+tomlkit==0.11.5
+traitlets==5.4.0
+tzdata==2022.4
+wcwidth==0.2.5
+whitenoise==6.2.0
+wrapt==1.14.1
