--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ Django==4.1.1
 django-ckeditor==6.5.1
 django-environ==0.9.0
 django-js-asset==2.0.0
+djangorestframework==3.14.0
 executing==1.0.0
 freezegun==1.2.2
 gunicorn==20.1.0
@@ -40,6 +41,7 @@ pyparsing==3.0.9
 pytest==7.1.3
 pytest-django==4.5.2
 python-dateutil==2.8.2
+pytz==2022.7
 six==1.16.0
 sqlparse==0.4.3
 stack-data==0.5.0
